[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwks-multi"
version = "0.0.0"
description = "JWT verifier with support for multiple JWKS endpoints and local fallback keys"
authors = [{ name = "Squad Risco Transacional" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"authlib>=1.6.9",
	"httpx>=0.28.1",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Topic :: Security",
]

[project.urls]
Repository = "https://gitlab.luizalabs.com/luizalabs/risco-360/libs/jwks-multi"
Issues = "https://gitlab.luizalabs.com/luizalabs/risco-360/libs/jwks-multi/-/issues"

[tool.setuptools.packages.find]
include = ["jwks_multi*"]

[dependency-groups]
lint = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-freezer>=0.4.9",
]
release = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
dev = [
    "bump2version>=1.0.1",
    "towncrier>=25.8.0",
]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=jwks_multi --cov-report=term-missing --cov-report=xml:coverage.xml"
log_cli = true
log_level = "INFO"
filterwarnings = "error"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff]
line-length = 79
format.quote-style = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.fixable = ["ALL"]
lint.select = ["ALL"]
lint.ignore = [
    "D104",
    "D100",
    "D101",
    "D102",
    "D107",
    "D203",
    "D205",
    "D212",
    "D213",
    "D103",
    "D401",
    "G004",
    "TRY400",
    "TRY300",
    "B008"
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "E501", "ANN201", "ANN001", "SLF001", "PLR2004", "S105", "PLR0913"]

[tool.black]
skip-string-normalization = true
line-length = 79
target-version = ["py313"]
include = '\.py$'

[tool.coverage.run]
source = ["jwks_multi/"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90

[tool.towncrier]
    directory = "changelog.d"
    filename = "CHANGELOG.md"
    start_string = "## [Unreleased]\n"
    title_format = "## [{version}] - {project_date}"
    package = ""
    package_dir = "."

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Added"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Fixed"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Changed"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Removed"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Changed"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "health"
        name = "Changed"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "security"
        name = "Security"
        showcontent = true
